# showcase

./: pyproject.toml
showcases/: 0_about.py  start.py
showcases/pages/: 1_movieparse.py  2_spotify_codegen.py
