[tool.poetry]
name = "showcases"
version = "0.1.0"
description = ""
authors = ["schuenemann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.14.1"
spotify-codegen = "^0.3.0"
movieparse = "^0.4.0"

[tool.black]
line-length=120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
